<resources>
    <string name="app_name">asmrdroid</string>
    <string name="tab1_label">Home</string>
    <string name="tab2_label">Import</string>
    <string name="tab3_label">Generate</string>
    <string name="home_fragment_text1">Welcome to ASMRdroid, an android app for remixing input asmr audio into new randomized audio. Please enable notifications to get progress bars.</string>
    <string name="import_fragment_text1">This tab is used for importing audio files to the app folder.</string>
    <string name="generate_fragment_text1">This tab is used for generating audio from the imported files. You can start listening to the file before it has finished being generated.</string>
    <string name="import_file_uri">Please select a file to import</string>
    <string name="pick_file_button_text">Pick File</string>
    <string name="import_file_button_text">Import File</string>
    <string name="import_tag_selector_text">Please select tags for the audio to import.</string>
    <string name="import_file_tag_list_description">Tag list</string>
    <string name="new_tag_button_text">Add new tag</string>
    <string name="new_tag_text_hint">Name of new tag</string>
    <string name="default_tag_label">default</string>
    <string name="generate_tag_selector_text">Please select tags for the audio to generate</string>
    <string name="generate_minutes_label">minutes to generate</string>
    <string name="generate_button_label">Generate audio</string>
    <string name="generate_default_minutes">0</string>
    <string name="db_opened_default_text">Database not yet opened.</string>
    <string name="db_corruption_default_text">Database corruption not yet checked.</string>
    <string name="db_audio_count_default_text">Database audio files not yet counted.</string>
    <string name="db_sample_count_default_text">Database samples not yet counted.</string>
    <string name="empty_db_button_text">Delete the database and create a new one.</string>
    <string name="out_folder_uri">Please select a folder for export.</string>
    <string name="out_folder_button">Pick Folder</string>
    <string name="external_files_dir_text">Error: external files directory unknown.</string>
    <string name="channel_name">asmrdroid</string>
    <string name="channel_description">asmrdroid</string>
</resources>